# packrakk

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  crud.py  database.py  main.py  models.py  risk.py  scanner.py  schemas.py
backend/app/parsers/: grype_parser.py  syft_parser.py  trivy_parser.py
backend/app/routers/: health.py  reports.py  scans.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ComponentTable.tsx  Layout.tsx  RiskBadge.tsx  ScanForm.tsx  ScanHistory.tsx  SeverityBadge.tsx  SeverityChart.tsx  StatCard.tsx  VulnerabilityTable.tsx
frontend/src/pages/: Dashboard.tsx  ScanDetail.tsx
